sovyet focus wip

--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -11,3 +11,68 @@
  EFR_democratic_ADJ:0 "French"
  EFR_neutrality_ADJ:0 "French"
  EFR_communism_ADJ:0 "French"
+ SOV_local_industry_stalingrad:0 "Localized Industry In Stalingrad"
+ SOV_international_industry_kiev:0 "Foreign Industry In Kiev"
+ SOV_foreign_industry_advisors:0 "Hire Foreign Advisors"
+ SOV_local_industry_advisors:0 "Employ Local Advisors"
+ SOV_third_five_year_plan:0 "The Second Five Year Plan"
+ SOV_establish_nuclear_facility:0 "Establish Nuclear Facility"
+ SOV_industrial_research_grants:0 "Industrial Research Grants"
+ SOV_heavy_industrialization:0 "Breakthroughs in Heavy Industry"
+ SOV_armament_program:0 "Rapid Armament Program"
+ SOV_expand_naval_bases:0 "Expand Naval Bases"
+ SOV_expand_air_bases:0 "Expand Air Bases"
+ SOV_end_third_five_year_plan:0 "Balanced Approach"
+ SOV_end_third_five_year_plan_2:0 "Production Priority"
+ SOV_end_third_five_year_plan_3:0 "Construction Priority"
+ SOV_the_great_purge:0 "The Great Purge Completed"
+ SOV_artists_purge:0 "Artists Purge"
+ SOV_intelligent_purge:0 "Intelligentsia Purge"
+ SOV_army_purge:0 "Army Purge"
+ SOV_eliminate_the_threats_within:0 "Inner Party Purge"
+ SOV_behead_the_snake:0 "Behead The Snake"
+ SOV_cult_of_personality:0 "Stalin's Cult of Personality"
+ SOV_following_footsteps_of_lenin:0 "Following Footsteps of Lenin"
+ SOV_our_own_path:0 "Our Own Path Forward"
+ SOV_progress_cult:0 "Progress Cult"
+ SOV_the_new_soviet_man:0 "The New Soviet Man"
+ SOV_socialism_in_one_country:0 "Socialism In One Country"
+ SOV_wrathful_gaze_over_europe:0 "Wrathful Gaze Over Europe"
+ SOV_secure_the_baltic:0 "Secure The Baltics"
+ SOV_partition_of_poland:0 "Partition of Poland"
+ SOV_flexible_fortifications:0 "Flexible Fortifications"
+ SOV_stalin_line:0 "Stalin Line"
+ SOV_coastal_defense:0 "Coastal Defense"
+ SOV_lessons_of_the_winter_war:0 "Lessons Of The Winter War"
+ SOV_red_army_rebuilt:0 "Rebuild the Red Army"
+ SOV_rehabilitated_generals:0 "Rehabilitated Generals"
+ SOV_behind_the_enemy_lines:0 "Behind the Enemy Lines"
+ SOV_defend_leningrad:0 "Defend Leningrad"
+ SOV_defend_stalingrad:0 "Defend Stalingrad"
+ SOV_accross_the_aisle:0 "Accross The Aisle"
+ SOV_operation_countenance:0 "Operation Countenance"
+ SOV_the_lend_lease_program:0 "The Lend Lease Program"
+ SOV_sabotage_caucassian_oil:0 "Sabotage The Oil Fields"
+ SOV_evacuate_industry:0 "Evacuate Industry"
+ SOV_tankograd:0 "Tankograd"
+ SOV_rebuilt_the_supply_network:0 "Rebuild the Supply Network"
+ SOV_total_mobilization:0 "Total Mobilization"
+ SOV_onwards_to_berlin:0 "Onwards to Berlin!"
+ SOV_naval_expansion:0 "Naval Expansion"
+ SOV_artillery_development_program:0 "Artillery Developments"
+ SOV_anti_tank_program:0 "Anti-Tank Program"
+ SOV_anti_air_program:0 "Anti-Air Program"
+ SOV_urals_military_industry:0 "Urals Military Industry"
+ SOV_military_education:0 "Soviet Military Education"
+ SOV_tank_development:0 "Tank Development"
+ SOV_state_of_nation_l:0 "Officers Purged"
+ SOV_state_of_army_l:0 "Army Purged"
+ SOV_state_of_research_l:0 "Intelligentsia Purged"
+ SOV_state_of_airforce_l:0 "Airforce Purged"
+ SOV_the_second_five_year_plan:0 "The Second Five Year Plan"
+ SOV_officers_purge:0 "Officers Purge"
+ SOV_state_of_the_party_l:0 "Inner Party Purged"
+ SOV_NVKD_1:0 "Expand the NKVD"
+ custom_tooltip_tt:0 "We may now begin to reduce effects of the Great Purge."
+ custom_tooltip_2_tt:0 "Completion of this focus is not necessary for the partition of Poland to occur."
+ SOV_soviet_industry_l:0 "The Second Five Year Plan"
