--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -76,3 +76,4 @@
  custom_tooltip_tt:0 "We may now begin to reduce effects of the Great Purge."
  custom_tooltip_2_tt:0 "Completion of this focus is not necessary for the partition of Poland to occur."
  SOV_soviet_industry_l:0 "The Second Five Year Plan"
+ SOV_soviet_industry_2l:0 "The Third Five Year Plan"
