--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -12,3 +12,4 @@
  EFR_neutrality_ADJ:0 "French"
  EFR_communism_ADJ:0 "French"
  GER_penal_spawn_tt:0 "Multiple SS Bridages will spawn."
+ GER_mefo_tt:0 "MEFO BILLS .ddddd"
