jap usa kaynak building localisation zart zurt

--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -30,3 +30,8 @@
  USA_highway_program_idea:0 "Development Program"
  USA_new_deal:0 "The New Deal"
  USA_happytime:0 "Happy Times"
+ JAP_Infra:0 "Infrastructure Focus"
+ JAP_war_of_resistance:0 "War of Resistance"
+ JAP_build_escorts:0 "Escort Focus"
+ JAP_no_navy_allies:0 "No Brain Allies"
+ JAP_banzai:0 "Banzai!"
