--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -37,3 +37,6 @@
  JAP_build_escorts:0 "Escort Focus"
  JAP_no_navy_allies:0 "No Brain Allies"
  JAP_banzai:0 "Banzai!"
+ FRA_industry_reborn:0 "Industry Reborn"
+ FRA_beaten_but_not_broken:0 "Beaten, Not Broken"
+ FRA_nation_reborn:0 "Nation Reborn"
