torch & convoy fix for FRA

--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -40,3 +40,7 @@
  FRA_industry_reborn:0 "Industry Reborn"
  FRA_beaten_but_not_broken:0 "Beaten, Not Broken"
  FRA_nation_reborn:0 "Nation Reborn"
+ FRA_the_diamond_district:0 "The Diamond District"
+ FRA_take_over_congo:0 "Take Over Congo"
+ FRA_call_the_patriots:0 "Recall the Patriots"
+ FRA_operation_torch:0 "Operation Torch"
