--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -44,3 +44,4 @@
  FRA_take_over_congo:0 "Take Over Congo"
  FRA_call_the_patriots:0 "Recall the Patriots"
  FRA_operation_torch:0 "Operation Torch"
+ SAF_dan_pienaar:0 "Dan Pienaar"
