--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -45,3 +45,8 @@
  FRA_call_the_patriots:0 "Recall the Patriots"
  FRA_operation_torch:0 "Operation Torch"
  SAF_dan_pienaar:0 "Dan Pienaar"
+ ITA_bersaglieri_re2_tt:0 "Italian Special Forces gain %15 attack and defense bonus"
+ ITA_divisioni_alpine_re2_tt:0 "Italian Mountineers gain %10 organisation bonus"
+ ITA_fanti_dell_aria_re2_tt:0 "Italian Paratroopers gain %10 organisation bonus and looses less organisation when encircled"
+ ITA_a_bandits_war_re2_tt:0 "-%15 Organisation loss when moving\n+%15 armour speed\b+%15 Division Organisation"
+ ITA_army_leaders_re2_tt:0 "+%10 Leader Experience Gain\n-%15 Army Leader Cost\n-%25 Promotion Cost"
