--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -45,3 +45,4 @@
  FRA_call_the_patriots:0 "Recall the Patriots"
  FRA_operation_torch:0 "Operation Torch"
  SAF_dan_pienaar:0 "Dan Pienaar"
+ SOV_closed_economy_buff_l:0 "Soviet Closed Economy"
