changes in desc
https://discord.com/channels/629399036306391041/1364576669792342118/1366555640260202497

--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -45,3 +45,5 @@
  FRA_call_the_patriots:0 "Recall the Patriots"
  FRA_operation_torch:0 "Operation Torch"
  SAF_dan_pienaar:0 "Dan Pienaar"
+ GER_peace_time_train:0 "Peace Time Training"
+ GER_no_trade_back:9 "Fuck Trade Back"
