--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -54,3 +54,7 @@
  Army_reforms2:0 "Armour Reforms"
  army_reform3:0 "Army Reforms"
  ITA_tanks:0 "Italian Tanks"
+ army_reform4:0 "Defenders Of Italy"
+ air_reform1:0 "Reformed Air"
+ air_reform2:0 "Investing On Fighters"
+ air_reform3:0 "Investing On Naval Bombers"
