--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -58,3 +58,4 @@
  air_reform1:0 "Reformed Air"
  air_reform2:0 "Investing On Fighters"
  air_reform3:0 "Investing On Naval Bombers"
+ ITA_tank_production:0 "Tank Production"
