--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -47,4 +47,9 @@
  SAF_dan_pienaar:0 "Dan Pienaar"
  SOV_closed_economy_buff_l:0 "Soviet Closed Economy"
  GER_peace_time_train:0 "Peace Time Training"
- GER_no_trade_back:9 "Fuck Trade Back"
+ GER_no_trade_back:0 "Fuck Trade Back"
+ SOV_airports_devastated:0 "Airports Devastated"
+ SOV_short_debuff:0 "Army In Chaos I"
+ SOV_short_debuff_2:0 "Amry In Chaos II"
+ SOV_short_debuff_3:0 "Amry In Chaos III"
+ SOV_short_debuff_4:0 "Amry In Chaos IV"
