--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -48,3 +48,27 @@
  SOV_closed_economy_buff_l:0 "Soviet Closed Economy"
  GER_peace_time_train:0 "Peace Time Training"
  GER_no_trade_back:9 "Fuck Trade Back"
+ generic_mobile_tank_organization_allies:0 "Renault"
+ generic_mobile_tank_organization_axis:0 "Alkett"
+ generic_mobile_tank_organization_sov:0 "OKMO"
+ generic_medium_tank_organization_allies:0 "Chrysler"
+ generic_medium_tank_organization_axis:0 "MAN"
+ generic_medium_tank_organization_sov:0 "Astrov Design Bureau"
+ generic_heavy_tank_organization_allies:0 "Vauxhall"
+ generic_heavy_tank_organization_axis:0 "Henschel"
+ generic_heavy_tank_organization_sov:0 "Kirov"
+ generic_tank_refurbishment_plant_organization_allies:0 "Vickers Armstrong"
+ generic_tank_refurbishment_plant_organization_axis:0 "Reichswerke"
+ generic_tank_refurbishment_plant_organization_sov:0 "Morozov Design Bureau"
+ generic_light_ship_organization_axis:0 "Germaniawerft"
+ generic_light_ship_organization_allies:0 "Norfolk Naval Yard"
+ generic_light_ship_organization_jap:0 "Yokosuka Naval Arsenal"
+ generic_light_aircraft_organization_axis:0 "Messerschmitt"
+ generic_light_aircraft_organization_allies:0 "Supermarine"
+ generic_light_aircraft_organization_sov:0 "Mig Design Bureau"
+ generic_light_aircraft_organization_jap:0 "Mitsubishi"
+ generic_materials_organization_axis:0 "Mauser"
+ generic_materials_organization_allies:0 "Small Arms Limited"
+ generic_materials_organization_sov:0 "Tula Arms Limited"
+ generic_materials_organization_jap:0 "Tokyo Arsenal"
+
