Japon air idea ve italy fighter IC fix.

--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -92,3 +92,4 @@
  SOV_short_debuff_2:0 "Amry In Chaos II"
  SOV_short_debuff_3:0 "Amry In Chaos III"
  SOV_short_debuff_4:0 "Amry In Chaos IV"
+ imperial_air_force:0 "Imperial Japanese Air Forces"
