Agency & MIO fixleri

--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -85,10 +85,28 @@
  generic_materials_organization_allies:0 "Small Arms Limited"
  generic_materials_organization_sov:0 "Tula Arms Limited"
  generic_materials_organization_jap:0 "Tokyo Arsenal"
-
+ generic_infantry_organization:0 "Infantry & Support Equipment Organization"
+ generic_utility_material_organization:0 "Utility Equipment Organization"
+ generic_light_tank_organization:0 "Light Tank Manufacturer"
  GER_no_trade_back:0 "Fuck Trade Back"
  SOV_airports_devastated:0 "Airports Devastated"
  SOV_short_debuff:0 "Army In Chaos I"
  SOV_short_debuff_2:0 "Amry In Chaos II"
  SOV_short_debuff_3:0 "Amry In Chaos III"
  SOV_short_debuff_4:0 "Amry In Chaos IV"
+ generic_mio_tank_1_l:0 "MIO Upgrade"
+ generic_infantry_organization_axis:0 "Mauser"
+ generic_artillery_organization_axis:0 "Rheinmetall"
+ generic_utility_material_organization_axis:0 "Opel"
+ generic_light_tank_organization_axis:0 "Alkett"
+ generic_light_tank_organization_allies:0 "Renault"
+ generic_light_tank_organization_sov:0 "OKMO"
+ generic_infantry_organization_allies:0 "Small Arms Limited"
+ generic_infantry_organization_sov:0 "Tula Arms Plant"
+ generic_infantry_organization_jap:0 "Tokyo Arsenal"
+ generic_artillery_organization_allies:0 "Rock Island Arsenal"
+ generic_artillery_organization_sov:0 "Morozov Design Bureau"
+ generic_artillery_organization_jap:0 "Osaka Army Arsenal"
+ generic_utility_material_organization_allies:0 "Ford Motor Company"
+ generic_utility_material_organization_sov:0 "GAZ"
+ generic_utility_material_organization_jap:0 "Nissan"
