--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -112,3 +112,4 @@
  generic_utility_material_organization_jap:0 "Nissan"
  imperial_air_force:0 "Imperial Japanese Air Forces"
  FRA_military_factories_effect_tt:0 "Adds single Military Factory to every state previously invested in."
+ ADEN_STRAIT:0 "Blud Strait"
