--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -113,3 +113,5 @@
  imperial_air_force:0 "Imperial Japanese Air Forces"
  FRA_military_factories_effect_tt:0 "Adds single Military Factory to every state previously invested in."
  ADEN_STRAIT:0 "Blud Strait"
+ sealion_score_modifier_spirit:0 "§RProtected by the Royal Navy"
+ sealion_score_modifier_spirit_desc:0 "As a precondition for Unternehmen Seelöwe, Hitler specified the achievement of both air and naval superiority over the English Channel and the proposed landing sites, but the German forces did not achieve either at any point during the war. Nevertheless, both the German Army and Navy undertook a major programme of preparations for an invasion: training troops, developing specialised weapons and equipment, and modifying transport vessels. A large number of river barges and transport ships were gathered together on the Channel coast, but with Luftwaffe losses mounting in the Battle of Britain and no sign that the Royal Navy had been defeated, Hitler postponed Sea Lion indefinitely on 17 September 1940; it was never put into action."
