--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -115,3 +115,8 @@
  ADEN_STRAIT:0 "Aden Strait"
  tank_medium_cannon_3:0 "Advanced Medium Cannon"
  tank_medium_cannon_3_desc:0 "A versatile and well-rounded weapon designed to handle a wide array of combat scenarios. While it does not specialize in either anti-infantry or anti-tank roles, its balanced performance ensures a high degree of adaptability on the battlefield. As an advanced medium tank gun, it grants the vehicle flexibility, allowing it to effectively engage diverse threats without being limited to a singular function."
+ generic_light_plane_organization:0 "Light Plane Manufacturer"
+ generic_light_plane_organization_jap:0 "Mitsubishi"
+ generic_light_plane_organization_sov:0 "MIG Design Bureau"
+ generic_light_plane_organization_axis:0 "Messerschmitt"
+ generic_light_plane_organization_allies:0 "Supermarine"
