error fix bitmek üzere gfx ve soundlar kaldı denilebilir

--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -117,8 +117,9 @@
  tank_medium_cannon_3_desc:0 "A versatile and well-rounded weapon designed to handle a wide array of combat scenarios. While it does not specialize in either anti-infantry or anti-tank roles, its balanced performance ensures a high degree of adaptability on the battlefield. As an advanced medium tank gun, it grants the vehicle flexibility, allowing it to effectively engage diverse threats without being limited to a singular function."
  GER_hermann_goring_werke:0 "Hermann Goring Werke"
  GER_kdf_wagen:0 "Kdf Wagen"
- GER_molotov_ribbentrop_pact:0 "Molotov Ribbentrop Pact"
+ GER_molotov_ribbentrop_pact:0 "Molotov Ribbentrop Pact."
  GER_fate_of_iraq:0 "Fate of Iraq"
+ GER_war_with_the_ussr:0 "War With USSR"
  ITA_moschettieri_del_duce:0 "Defenders of Italy"
  ITA_litoranea_balbo:0 "More Naval Bases"
  ENG_tank_focus:0 "Armor Focus"
