decision ve localization

--- a/localisation/english/replace/r_equipment_l_english.yml
+++ b/localisation/english/replace/r_equipment_l_english.yml
@@ -6,3 +6,4 @@
  
  SWI_infantry_equipment_3:0 "Sturmgewehr 52"
  SWI_infantry_equipment_3_short:0 "STG52"
+ war_propaganda_film_industry:0 "Domestic Film Industry"
