--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -144,4 +144,6 @@
  generic_light_plane_organization_sov:0 "MIG Design Bureau"
  generic_light_plane_organization_axis:0 "Messerschmitt"
  generic_light_plane_organization_allies:0 "Supermarine"
+ equipment_cost_reduction_tt:0 "This doctrine will reduce the amount of infantry equipment needed by our divisions by a quarter."
+ STATE_1017:0 "Inner Papua"
 
