--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -180,5 +180,7 @@
  NZL_dock_desc:0 "You are the shield against the endless terrors that lie beyond the stars. Your blade must be forever sharp and your mind keen to survive what lies beyond."
  NZL_fleet_coop:0 "Silver for Devils"
  NZL_fleet_coop_desc:0 "Never accept gifts or favors from fiends or those who truck with them. Stay true to your order, your comrades, and your duty."
+ ITA_expand_the_repair_yards:0 "Veneto Arsenal"
+ 
 
 
