AST ve NZL naval focus fix

--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -146,40 +146,26 @@
  generic_light_plane_organization_allies:0 "Supermarine"
  equipment_cost_reduction_tt:0 "This doctrine will reduce the amount of infantry equipment needed by our divisions by a quarter."
  STATE_1017:0 "Inner Papua"
+ NZL_Heavy_ships:0 "Chrome Explosion"
+ NZL_navy_spending:0 "More Budget Cuts for the Navy"
+ NZL_Radar:0 "Our Eyes on the Ocean"
+ NZL_dock:0 "Fuck the Japanese"
+ NZL_guns:0 "Fuck the Manchus"
+ NZL_fleet_coop:0 "Fuck the Siamese"
+ NZL_cockatoo_island_shipyards:0 "Cokatoo Island Shipyards"
+ NZL_protect_overseas_commerce:0 "Protect Overseas Commerce"
+ NZL_scrap_iron_flotilla:0 "Scrap Iron Flotilla"
+ NZL_fly_the_jolly_roger:0 "Fly The Jolly Roger"
+ NZL_royal_australian_submarine_service:0 "Royal New Zealand Submarine Service"
+ NZL_naval_auxiliary_patrol:0 "Naval Auxiliary Patrol"
+ NZL_cruisers:0 "Cruisers"
+ NZL_pacific_area_navy:0 "Pacific Area Navy"
  AST_Heavy_ships:0 "Chrome Explosion"
  AST_navy_spending:0 "More Budget Cuts for the Navy"
  AST_Radar:0 "Our Eyes on the Ocean"
  AST_dock:0 "Fuck the Japanese"
  AST_guns:0 "Fuck the Manchus"
  AST_fleet_coop:0 "Fuck the Siamese"
- NZL_royal_Navy:0 "Our Duty"
- NZL_royal_Navy_desc:0 "Up to this time you have been in a preparatory stage, committed to the path but not yet sworn to it."
- NZL_navy_spending:0 "Protect the Seven Seas"
- NZL_navy_spending_desc:0 "Innocence. All people begin life in an innocent state, and it is their environment or the influence of dark forces that drives them to evil. By setting the proper example, and working to heal the wounds of a deeply flawed world, you can set anyone on a righteous path."
- NZL_protect_convoy:0 "Plunder their Riches"
- NZL_protect_convoy_desc:0 "It is not enough to merely defeat an enemy in battle. Your victory must be so overwhelming that your enemies’ will to fight is shattered forever. A blade can end a life. Fear can end an empire."
- NZL_doctrine:0 "Learn from Their Mistakes"
- NZL_doctrine_desc:0 "Hone the Body. Like raw stone, your body must be worked so its potential can be realized."
- NZL_Radar:0 "See the Unseen"
- NZL_Radar_desc:0 "Be the Light. Be a glorious beacon for all who live in despair. Let the light of your joy and courage shine forth in all your deeds."
- NZL_destr:0 "Protect the Weak"
- NZL_destr_desc:0 "Shelter the Light. Where there is good, beauty, love, and laughter in the world, stand against the wickedness that would swallow it. Where life flourishes, stand against the forces that would render it barren."
- NZL_royal_submarine_service:0 "Douse the Flame of Hope"
- NZL_royal_submarine_service_desc:0 "Actions over Words. Strive to be known by glorious deeds, not words."
- NZL_naval_patrol:0 "Protect the Weak"
- NZL_naval_patrol_desc:0 "Vigilance. The threats you face are cunning, powerful, and subversive. Be ever alert for their corruption."
- NZL_Heavy_ships:0 "Last Act"
- NZL_Heavy_ships_desc:0 "Courage. Never fear to act, though caution is wise."
- NZL_lessons_naval_war:0 "Last Defence"
- NZL_lessons_naval_war_desc:0 "Embrace Destiny You didn't choose this path, but it's yours to walk. And it will carry you into legend."
- NZL_pacific_area_navy:0 "Last Tenet"
- NZL_pacific_area_navy_desc:0 "Honor. Treat others with fairness, and let your honorable deeds be an example to them. Do as much good as possible while causing the least amount of harm."
- NZL_guns:0 "Iron for Faes"
- NZL_guns_desc:0 "Wisdom. Your heart and mind must stay clear, for eventually you will be forced to admit defeat. While every creature can be redeemed, some are so far along the path of evil that you have no choice but to end their lives for the greater good. Any such action must be carefully weighed and the consequences fully understood, but once you have made the decision, follow through with it knowing your path is just."
- NZL_dock:0 "Steel for Monsters"
- NZL_dock_desc:0 "You are the shield against the endless terrors that lie beyond the stars. Your blade must be forever sharp and your mind keen to survive what lies beyond."
- NZL_fleet_coop:0 "Silver for Devils"
- NZL_fleet_coop_desc:0 "Never accept gifts or favors from fiends or those who truck with them. Stay true to your order, your comrades, and your duty."
  ITA_expand_the_repair_yards:0 "Veneto Arsenal"
  
 
