--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -181,6 +181,8 @@
  NZL_fleet_coop:0 "Silver for Devils"
  NZL_fleet_coop_desc:0 "Never accept gifts or favors from fiends or those who truck with them. Stay true to your order, your comrades, and your duty."
  ITA_expand_the_repair_yards:0 "Veneto Arsenal"
- 
+ USA_ships_for_victory_idea:0 "Emergency Shipbuilding Programs"
+ USA_ships_for_victory:0 "Ships for Victory"
+ USA_ships_for_victory_desc:0 "By the end of World War II the U.S. Navy was by far the largest and most powerful navy in the world with 6,768 ships, including 28 aircraft carriers, 23 battleships, 71 escort carriers, 72 cruisers, 232 submarines, 377 destroyers, and thousands of amphibious, supply and auxiliary ships."
 
 
