traitler ve okyanuslar + focus fixleri

--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -11,6 +11,9 @@
  EFR_democratic_ADJ:0 "French"
  EFR_neutrality_ADJ:0 "French"
  EFR_communism_ADJ:0 "French"
+ XXX_fascism: "Japan"
+ XXX_fascism_ADJ: "Japanese"
+ XXX_fascism_DEF: "The Japanese Empire"
  GER_penal_spawn_tt:0 "Multiple SS Bridages will spawn."
  GER_mefo_tt:0 "MEFO BILLS .ddddd"
  USA_recovery_from_dust_bowl:0 "Recover From Dust Bowl"
