banzai & tora tora localization

--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -215,3 +215,9 @@
  natural_fortress:0 "Natural Fortress"
  pacific_superiority_idea:0 "§4War In The Pacific§!"
  war_in_pacific_tt:0 "§4The War in the Pacific is taking its toll on our nation, we must end the Japanese supremacy in the Pacific.\n§!"
+ JAP_tora_tora_tora_idea_2:0 "Tora! Tora! Tora! II"
+ JAP_tora_tora_tora_idea_3:0 "Tora! Tora! Tora! III"
+ JAP_tora_tora_tora_idea_4:0 "Tora! Tora! Tora! IV"
+ JAP_banzai_2:0 "Banzai! II"
+ JAP_banzai_3:0 "Banzai! III"
+ JAP_banzai_4:0 "Banzai! IV"
