--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -215,6 +215,9 @@
  natural_fortress:0 "Natural Fortress"
  pacific_superiority_idea:0 "§4War In The Pacific§!"
  war_in_pacific_tt:0 "§4The War in the Pacific is taking its toll on our nation, we must end the Japanese supremacy in the Pacific.\n§!"
+ atlantic_wall_idea:0 "§4Atlantikwall§!"
+ atlantic_wall_idea_tt:0 "§4Allied presence in the Pacific and how long our defences have been up will dictate how strong our Atlantic shore defences are.\n§!"
+ atlantic_wall_focus_tt:0 "§4This focus will fortify all our Atlantic shores with advanced fortifications.\n\nTaking this focus later on does not yield any further benefits.§!"
  JAP_tora_tora_tora_idea_2:0 "Tora! Tora! Tora! II"
  JAP_tora_tora_tora_idea_3:0 "Tora! Tora! Tora! III"
  JAP_tora_tora_tora_idea_4:0 "Tora! Tora! Tora! IV"
