victory points(bakma)

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1857,6 +1857,13 @@
  VICTORY_POINTS_7124: "Yandan"
  VICTORY_POINTS_4162: "Yenmis"
  VICTORY_POINTS_11968: "Cikartmasi"
+ VICTORY_POINTS_6408: "Tung tung sahur hideout"
+ VICTORY_POINTS_11922: "Lirili Larila Hometown"
+ VICTORY_POINTS_3776: "Ballerina Cappuccino's Location"
+ VICTORY_POINTS_12135: "Brr Brr Patapim hideout"
+ VICTORY_POINTS_11253: "Bombardilo Crocodilo Airbase"
+ VICTORY_POINTS_9486: "SS Floyd's memorial"
+
 
 
 
