mısır allies buff :)

--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -224,3 +224,5 @@
  JAP_banzai_2:0 "Banzai! II"
  JAP_banzai_3:0 "Banzai! III"
  JAP_banzai_4:0 "Banzai! IV"
+ mediterranean_bastion_idea:0 "Mediterranean Bastion"
+ mediterranean_bastion_idea_tt:0 "Our fortifications will last until 1941"
