--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -226,3 +226,4 @@
  JAP_banzai_4:0 "Banzai! IV"
  mediterranean_bastion_idea:0 "Mediterranean Bastion"
  mediterranean_bastion_idea_tt:0 "Our fortifications will last until 1941"
+ SOV_tank_production_idea:0 "Uralvagonzavod"
