--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -91,9 +91,9 @@
  GER_no_trade_back:0 "Fuck Trade Back"
  SOV_airports_devastated:0 "Airports Devastated"
  SOV_short_debuff:0 "Army In Chaos I"
- SOV_short_debuff_2:0 "Amry In Chaos II"
- SOV_short_debuff_3:0 "Amry In Chaos III"
- SOV_short_debuff_4:0 "Amry In Chaos IV"
+ SOV_short_debuff_2:0 "Army In Chaos II"
+ SOV_short_debuff_3:0 "Army In Chaos III"
+ SOV_short_debuff_4:0 "Army In Chaos IV"
  generic_mio_tank_1_l:0 "MIO Upgrade"
  generic_infantry_organization_axis:0 "Mauser"
  generic_artillery_organization_axis:0 "Rheinmetall"
@@ -227,3 +227,15 @@
  mediterranean_bastion_idea:0 "Mediterranean Bastion"
  mediterranean_bastion_idea_tt:0 "Our fortifications will last until 1941"
  SOV_tank_production_idea:0 "Uralvagonzavod"
+ sov_soviet_global_image:0 "Portray a Global Image"
+ sov_mechanized_wave:0 "Mechanized Wave"
+ sov_human_wave:0 "Human Wave"
+ sov_non_autonomous_generals:0 "Non-Autonomous Generals"
+ sov_autonomous_generals:0 "Autonomous Generals"
+ SOV_the_great_war:0 "The Great Patriotic War"
+ SOV_realism:0 "Socialist Realism"
+ ger_soft:0 "Focus on Soft Attack"
+ ger_hard:0 "Focus on Hard Attack"
+ GER_flak_36:0 "Develop the Flak 36"
+ GER_flak_36_desc:0 "flug zeyug abver kanone"
+ GER_mineraloelsicherungsplan:0 "Mineraloelsicherungsplan"
