--- a/localisation/bup_localisation_l_english.yml
+++ b/localisation/bup_localisation_l_english.yml
@@ -239,3 +239,6 @@
  GER_flak_36:0 "Develop the Flak 36"
  GER_flak_36_desc:0 "flug zeyug abver kanone"
  GER_mineraloelsicherungsplan:0 "Mineraloelsicherungsplan"
+ sealion_defense:0 "Defend the Isles"
+ SOV_home_fleet:0 "Home Fleet"
+ GER_production_base:0 "Fresh Production Lines"
